# safe-shutdown

./: .gitignore  pyproject.toml  setup.py
safe_shutdown/: __main__.py
safe_shutdown/models/: battery.py
safe_shutdown/services/: battery_service.py  log_service.py  system_service.py
snap/: snapcraft.yaml
tests/: test_battery.py  test_log_service.py  test_safe_shutdown.py  test_system_service.py
