[tool.poetry]
name = "safe-shutdown"
version = "0.1.0"
description = ""
authors = ["Guilherme Seganzerla <g.seganzerla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
yapf = "^0.32.0"
poetry2setup = "^1.0.0"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
safe-shutdown = 'safe_shutdown:__main__'
